src/objects/Report_Period__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Report Periods</relationshipLabel>
        <relationshipName>Report_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Report Period</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RP-{0000}</displayFormat>
        <label>Report Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>